src/objects/MUSW__Account_Contact__c.object
<CustomObject>
    <description>Junction object representing business associations</description>
    <fields>
        <fullName>Account_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Cust_Id__c</fullName>
        <externalId>true</externalId>
        <label>Applicant Cust Id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Associate_Status__c</fullName>
        <description>Associate Status between Account and Contact</description>
        <label>Associate Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Designated Controlling Person</inlineHelpText>
        <label>DCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Used for SoS Integration</description>
        <inlineHelpText>Used for SoS Integration</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c &amp; &apos; &apos; &amp; Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Used for SoS Integration</description>
        <inlineHelpText>Used for SoS Integration</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Account Contacts</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associates</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__BG_Account_Cart_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if the contact has access to pay for the Account&apos;s Cart.</description>
        <inlineHelpText>Specify if the contact has access to pay for the Account&apos;s Cart.</inlineHelpText>
        <label>Account Cart Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associations</relationshipLabel>
        <relationshipName>Account_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Used for SoS Integration</description>
        <inlineHelpText>Used for SoS Integration</inlineHelpText>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Position__c</fullName>
        <label>Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnerType__c</fullName>
        <label>OwnerType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Percentage__c</fullName>
        <label>Ownership Percentage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Recalculate_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Recalculating Sharing when this is checked to true</description>
        <label>Recalculate Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Company_Name__c</fullName>
        <label>Related Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <description>Release</description>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resend_Invitation_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Resend Invitation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator</fullName>
                </value>
				<value>
                    <fullName>Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Id__c</fullName>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Table__c</fullName>
        <label>Source Table</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Pending Add</fullName>
                    <isActive>false</isActive>
                    <label>Pending Add</label>
                </value>
                <value>
                    <fullName>Pending Remove</fullName>
                    <isActive>false</isActive>
                    <label>Pending Remove</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Used for SoS Integration</description>
        <inlineHelpText>Used for SoS Integration</inlineHelpText>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_select__c</fullName>
        <label>Title</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chief Construction Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Investment Officer</fullName>
                </value>
                <value>
                    <fullName>Chief Operations Officer</fullName>
                </value>
                <value>
                    <fullName>Controlling Person</fullName>
                </value>
                <value>
                    <fullName>Controlling Interest</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Direct Owner</fullName>
                </value>
                <value>
                    <fullName>Executive Vice President</fullName>
                </value>
                <value>
                    <fullName>Indirect Owner</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>President</fullName>
                </value>
                <value>
                    <fullName>Secretary</fullName>
                </value>
                <value>
                    <fullName>Shareholder</fullName>
                </value>
                <value>
                    <fullName>Supervisory Committee Member</fullName>
                </value>
                <value>
                    <fullName>Treasurer</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invitation_send_date__c</fullName>
        <label>invitation send date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isAdminContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAdminContact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>resend_Invitation__c</fullName>
        <formula>IF( AND( NOT(ISPICKVAL(Status__c, &apos;Invited&apos;)), TODAY()- invitation_send_date__c &gt;= 7 ), true, false)</formula>
        <label>resend Invitation</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Contact</label>
    <nameField>
        <displayFormat>ACX-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Contacts</pluralLabel>
	<recordTypes>
        <fullName>DOR_Account_Contacts</fullName>
        <active>true</active>
        <description>This record type to map data coming from DOR Interface</description>
        <label>DOR Account Contacts</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>